# grok-build-auth

./: .env.example  .gitignore  NOTICE  README.en.md  README.md  SECURITY.md  check_accounts.py  lefthook.yml  pyproject.toml  pyrightconfig.json  requirements.txt  retry_oauth_from_sso.py  ruff.toml  run.py  xai_build_quota_probe.py  xai_oauth_export_cliproxyapi.py  xai_oauth_login.py
.github/workflows/: ci.yml
alias_mail/: alias_mail.py
contrib/: __init__.py
contrib/alias_mail/: __init__.py  alias_mail.py
githooks/: pre-commit
scripts/: __init__.py  commit-msg-check.sh  quality-check.sh  secret_check.py
tests/: test_envutil_jwt.py  test_extract_xai_code.py  test_proxy_parse.py  test_secret_check.py
tools/: check_accounts.py  retry_oauth_from_sso.py  xai_build_quota_probe.py  xai_oauth_export_cliproxyapi.py  xai_oauth_login.py
turnstilePatch/: content.js
xconsole_client/: __init__.py  camoufox_solver.py  client.py  codes.py  config.py  drission_solver.py  envutil.py  fingerprint.py  grpcweb.py  logutil.py  mail_channels.py  mailbox.py  mailbox_pool.py  maildrop_transport.py  models.py  oauth_protocol.py  paths.py  proxy_pool.py  safari_solver.py  solver.py  sso.py  sso2auth.py  tempmail_transport.py  tempmailspot_transport.py  turnstile_pool.py  xai_oauth.py  yyds_transport.py
xconsole_client/account_check/: __init__.py  authio.py  billing.py  cli.py  constants.py  errors.py  plan.py  probe.py
